ui/file_manager/file_manager/foreground/css/file_manager_gm3.css
/* ... */
#directory-tree [renaming] > .tree-row > .file-row > input {
  display: block;
}

html:not(.col-resize) #directory-tree .tree-item:not([disabled]) >
    .tree-row:not([active]):not([selected]):hover > .file-row {
  background-color: var(--cros-sys-hover_on_subtle);
}

html.pointer-active #directory-tree .tree-item:not([disabled]) >
    .tree-row:not([active]):not([selected]) > .file-row:active {
  background-color: var(--cros-sys-hover_on_subtle);
}

html.pointer-active #directory-tree
    .tree-row:not([active]):not([selected]):hover > .file-row:not(:active) {
  background-color: unset;
}

html.pointer-active #directory-tree :not(:active) {
  cursor: default;
}

html.drag-drop-active #directory-tree .tree-item.denies > .tree-row > .file-row {
  background-color: var(--cros-sys-error_container);
  color: var(--cros-sys-on_error_container);
}

html.drag-drop-active #directory-tree .tree-item.accepts > .tree-row > .file-row {
  background-color: var(--cros-sys-hover_on_prominent);
}

html.drag-drop-active #directory-tree
    .tree-item.accepts > .tree-row[active] > .file-row {
  background-color: var(--cros-sys-primary);
}

html.focus-outline-visible #directory-tree:focus .tree-row[selected] > .file-row {
  outline: 2px solid var(--cros-sys-focus_ring);
  outline-offset: 2px;
}

#directory-tree .tree-item:not([disabled]) .tree-row[active] > .file-row {
  background-color: var(--cros-sys-primary);
  color: var(--cros-sys-on_primary);
}

#directory-tree .tree-item[disabled] > .tree-row > .file-row {
  cursor: default;
}

#directory-tree .tree-row > .file-row > .align-right-icon {
  --iron-icon-height: 20px;
  --iron-icon-width: 20px;
  border-radius: 16px;
  border-style: none;
  box-sizing: border-box;
  flex: none;
  height: 32px;
  left: 1px;
  position: relative;
  right: 1px;
  width: 32px;
  z-index: 1;
}


#directory-tree .tree-row > .file-row > .external-link-icon iron-icon {
  padding: 6px;
}

#directory-tree .tree-row > .file-row > .root-eject {
  --text-color: currentColor;
  --hover-bg-color: var(--cros-sys-hover_on_subtle);
  min-width: 32px;
  padding: 0;
}

#directory-tree .tree-row[active] > .file-row > .root-eject {
  --hover-bg-color: var(--cros-sys-hover_on_prominent);
}

html.col-resize #directory-tree .tree-row > .file-row > .root-eject:hover {
  --hover-bg-color: none;
}

#directory-tree .tree-row > .file-row > .root-eject:focus {
  border: 1px solid var(--cros-sys-focus_ring);
}

#directory-tree .tree-row[active] > .file-row > .root-eject:focus {
  border: 1px solid var(--cros-sys-inverse_primary);
}

#directory-tree .tree-row > .file-row > .root-eject:active {
  --ink-color: var(--cros-sys-ripple_neutral_on_subtle);
  border-width: 0;
}

#directory-tree .tree-row[active] > .file-row > .root-eject:active {
  --ink-color: var(--cros-sys-ripple_neutral_on_prominent);
}
/* Can be removed after new directory replacement. -- END */

/* Splitter. */
.jelly-splitter {
  --xf-splitter-tracker-offset: 16px;
  --xf-splitter-z-index: 500;  /* Must be below the contextmenu (600). */
}

html.pointer-active .jelly-splitter:not(.splitter-active):hover {
  --xf-splitter-cursor: default;
  --xf-splitter-hover-color: none;
}

html.col-resize .jelly-splitter:not(.splitter-active):hover {
  --xf-splitter-cursor: col-resize;
  --xf-splitter-hover-color: none;
}

/* Breadcrumbs and things under the title but above the list view. */
.dialog-header {
  align-items: center;
  background: none;
  border-bottom: 1px solid var(--cros-separator-color);
  box-sizing: border-box;
  color: var(--cros-text-color-secondary);
  display: flex;
  flex: none;
  flex-direction: row;
  font-size: 14px;
  height: 57px;
  overflow: hidden;
  transition: background 220ms ease;
}

body.check-select .dialog-header {
  border-bottom: 1px solid var(--cros-separator-color);
  border-top: 1px solid transparent;
  color: var(--cros-sys-on_primary_container);
}

/* Display a border during check-select mode if we're in a dialog. (This
   can only happen in an open-multi-file dialog). */
body[type='open-multi-file'].check-select .dialog-header {
  border-top: 1px solid var(--cros-bg-color);
}

.dialog-header > .spacer {
  flex: 1 0 48px;
}

.dialog-header cr-button {
  --hover-bg-color: var(--cros-sys-hover_on_subtle);
  --ink-color: var(--cros-sys-ripple_neutral_on_subtle);
  --ripple-opacity: 100%;
  --text-color: currentColor;
  border: none;
  border-radius: 18px;
  box-sizing: border-box;
  color: var(--cros-sys-on_surface);
  cursor: pointer;
  height: 36px;
  min-width: 48px;
  position: relative;
  text-transform: uppercase;
  z-index: 1;
}

html.pointer-active .dialog-header cr-button:not(:active):hover {
  --hover-bg-color: none;
  cursor: default;
}

.dialog-header cr-button::after {
  content: '';
  height: 48px;
  position: absolute;
  width: 48px;
}

.dialog-header cr-button[menu-shown] {
  background-color: var(--cros-sys-primary_container);
  color: var(--cros-sys-on_primary_container);
}

.dialog-header cr-button:not([aria-haspopup]):active {
  background-color: var(--cros-sys-pressed_on_subtle);
}

html.focus-outline-visible .dialog-header cr-button:not(:active):focus {
  outline: 2px solid var(--cros-sys-focus_ring);
}

/** Avoid highlighting if element doesn't have focus by tab (tabindex=-1)
 *  or if focusing during mouse click event ":active" pseudo-selector. */
html.focus-outline-visible .dialog-header
    .menu-button:focus:not([tabindex='-1']):not(:active) {
  background-color: transparent;
}

body.check-select .dialog-header
    .menu-button:focus:not([tabindex='-1']):not(:active) {
  background-color: var(--cros-sys-ripple_neutral_on_subtle);
}

.dialog-header iron-icon,
.dialog-header .icon {
  height: 16px;
  width: 16px;
}

.dialog-header cr-button.icon-button {
  border-radius: 12px;
  height: 40px;
  margin: 4px;
  min-width: 40px;
  padding: 0;
  width: 40px;
}

.dialog-header cr-button.icon-button[aria-haspopup] {
  --ink-color: var(--cros-sys-ripple_primary);
}
/* ... */

